# onecode-rs

./: C_MKSTEMP_PATCH.md  C_THREAD_LOCAL_PATCH.md  Cargo.toml  GDB_SKELETON_READING_BUG.md  README.md  REFACTOR_ISBOOTSTRAP.md  SCHEMA_CLEANUP_BUG.md  THREAD_SAFETY.md  THREAD_SAFETY_FINAL.md  UPSTREAM_SYNC.md  build.rs
ONEcode/: ONElib.c
data/: test.1aln
examples/: read_seq.rs
src/: error.rs  ffi.rs  file.rs  lib.rs  schema.rs  types.rs
tests/: api_coverage_test.rs  basic_tests.rs  schema_parallel_test.rs  sequence_names_test.rs  thread_safety_tests.rs
